manifests/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:10.11.11
          ports:
            - containerPort: 8096
            - containerPort: 8920
          volumeMounts:
            - name: storage
              mountPath: /media
              subPath: media
            - name: storage
              mountPath: /config
              subPath: jellyfin/config
          resources:
            limits:
              cpu: "2"
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 256Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: media-nfs
