manifests/media/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - jellyfin.k8s.tanksrop.xyz
      secretName: media-k8s.tanksrop.xyz  # Reference the existing wildcard cert
  rules:
    - host: jellyfin.k8s.tanksrop.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 80
